--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 p.main{font-size:10pt;color:green}
 h2{font-family:Arial;font-weight:bold}
 h3{font-color:teal}
+body
+{
+  background:url("https://printablegraphics.in/html-background-image/html-background-images-in-blue-shades/.jpg);
+    }
