--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@ h2{font-family:Arial;font-weight:bold}
 h3{font-color:teal}
 body
 {
-  background:url(https://printablegraphics.in/html-background-image/html-background-images-in-blue-shades/.jpg);
+  background:url("akshata.jpg");
     }
