--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@ h2{font-family:Arial;font-weight:bold}
 h3{font-color:teal}
 body
 {
-  background:url("akshata.jpg");
+  background:url(akshata.jpg);
     }
