--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 p.main{font-size:10pt;color:green}
 h2{font-family:Arial;font-weight:bold}
 h3{font-color:teal}
-body
-{
-  background:url(akshata.jpg);
-    }
+h1{font-color:green}
