--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-p.main{font-size:10pt;color:green}
-h2{font-family:Arial;font-weight:bold}
+p.main{font-size:18pt;color:cornsilk}
+h2{font-family:Arial;font-weight:bold;color:white}
 h3{font-color:teal}
 h1{font-color:green}
