--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-p.main{font-size:18pt;color:cornsilk}
+p.main{font-size:12pt;color:cornsilk}
 h2{font-family:Arial;font-weight:bold;color:white}
 h3{font-color:teal}
 h1{font-color:green}
+h4{font-color:ivory}
